test/samples/linear/valid/assign-consume.crust
struct lin_point {
    int x;
    int y;
};

int main() {
    struct lin_point new;
    struct lin_point new2;
    struct lin_point new3;
    struct lin_point new4;
    int x; 
    int y;

    new = {struct lin_point -> 1,2 };

    new2 = new;
    new3 = new2;
    new4 = new3;

    :{x, y} = new4;

    return x + y;
} 
