test/samples/linear/invalid/silent-discard.crust

linear int make() {
    linear int b; 

    b = 5;

    return b;

}

int main() {
    
    make();

    return 0;
} 
